--- a/phimchill/build.gradle
+++ b/phimchill/build.gradle
@@ -23,9 +23,8 @@ dependencies {
     implementation 'org.springframework.boot:spring-boot-starter-web'
     implementation 'org.springframework.boot:spring-boot-starter-websocket'
     implementation 'org.flywaydb:flyway-core'
-    implementation 'org.flywaydb:flyway-mysql'
     compileOnly 'org.projectlombok:lombok'
-//    compileOnly "org.flywaydb:flyway-mysql"
+    compileOnly "org.flywaydb:flyway-mysql"
     runtimeOnly 'com.mysql:mysql-connector-j'
     annotationProcessor 'org.projectlombok:lombok'
     providedRuntime 'org.springframework.boot:spring-boot-starter-tomcat'
