Validate BE and Feature check email exist

--- a/phimchill/src/main/resources/application.properties
+++ b/phimchill/src/main/resources/application.properties
@@ -1,13 +1,14 @@
 spring.jpa.hibernate.ddl-auto=none
-spring.datasource.url=jdbc:mysql://${MYSQL_HOST:localhost}:3306/phim_chill?createData baseIfNotExist=true
+spring.datasource.url=jdbc:mysql://${MYSQL_HOST:localhost}:3306/phim_chill?createDatabaseIfNotExist=true
 spring.datasource.username=root
-<<<<<<< HEAD
-spring.datasource.password=123456
-=======
-spring.datasource.password=1234
->>>>>>> f0dce06085b60352fcf703b04b458f8a3c6379ac
+spring.datasource.password=12345678
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 spring.jpa.show-sql= true
 
-
+##Flyway
+spring.flyway.url=jdbc:mysql://localhost:3306/phim_chill?createDatabaseIfNotExist=true
+spring.flyway.user=root
+spring.flyway.password=12345678
+spring.flyway.enabled=true
+spring.flyway.baseline-on-migrate = true
 
