--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,14 +1,14 @@
 spring.jpa.hibernate.ddl-auto=none
 spring.datasource.url=jdbc:mysql://${MYSQL_HOST:localhost}:3306/phim_chill?createDatabaseIfNotExist=true
 spring.datasource.username=root
-spring.datasource.password=12345678
+spring.datasource.password=123456
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 spring.jpa.show-sql= true
 
 ##Flyway
 spring.flyway.url=jdbc:mysql://localhost:3306/phim_chill?createDatabaseIfNotExist=true
 spring.flyway.user=root
-spring.flyway.password=12345678
+spring.flyway.password=123456
 spring.flyway.enabled=true
 spring.flyway.baseline-on-migrate = true
 
