--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -6,7 +6,7 @@ spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 spring.jpa.show-sql= true
 
 ##Flyway
-spring.flyway.url=jdbc:mysql://localhost:3306/phim_chill?createDatabaseIfNotExist=true
+spring.flyway.url=jdbc:mysql://localhost:3306/phim_chill
 spring.flyway.user=root
 spring.flyway.password=12345678
 spring.flyway.enabled=true
