--- a/src/main/resources/application-local.properties
+++ b/src/main/resources/application-local.properties
@@ -10,6 +10,7 @@ spring.flyway.user=root
 spring.flyway.password=12345678
 spring.flyway.enabled=true
 spring.flyway.baseline-on-migrate = true
+spring.flyway.out-of-order=true
 
 #Hibernate
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQLDialect
