--- a/build.gradle
+++ b/build.gradle
@@ -26,6 +26,7 @@ dependencies {
     implementation 'org.flywaydb:flyway-mysql'
     implementation 'io.jsonwebtoken:jjwt:0.9.1'
     implementation 'javax.xml.bind:jaxb-api:2.3.1'
+    implementation group: 'com.google.code.gson', name: 'gson', version: '2.8.9'
     compileOnly 'org.projectlombok:lombok'
     compileOnly "org.flywaydb:flyway-mysql"
     runtimeOnly 'com.mysql:mysql-connector-j'
@@ -38,4 +39,3 @@ dependencies {
 tasks.named('test') {
     useJUnitPlatform()
 }
-
