--- a/src/main/resources/application-local.properties
+++ b/src/main/resources/application-local.properties
@@ -1,13 +1,13 @@
 spring.datasource.url=jdbc:mysql://${MYSQL_HOST:localhost}:3306/phim_chill?createDatabaseIfNotExist=true
 spring.datasource.username=root
-spring.datasource.password=12345678
+spring.datasource.password=admin
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 spring.jpa.show-sql= true
 
 ##Flyway
 spring.flyway.url=jdbc:mysql://localhost:3306/phim_chill
 spring.flyway.user=root
-spring.flyway.password=12345678
+spring.flyway.password=admin
 spring.flyway.enabled=true
 spring.flyway.baseline-on-migrate = true
 spring.flyway.out-of-order=true
