--- a/build.gradle
+++ b/build.gradle
@@ -24,6 +24,8 @@ dependencies {
     implementation 'org.springframework.boot:spring-boot-starter-websocket'
     implementation 'org.flywaydb:flyway-core'
     implementation 'org.flywaydb:flyway-mysql'
+    implementation group: 'com.google.api-client', name: 'google-api-client', version: '2.2.0'
+    implementation group: 'com.google.http-client', name: 'google-http-client-jackson2', version: '1.43.3'
     implementation 'io.jsonwebtoken:jjwt:0.9.1'
     implementation 'javax.xml.bind:jaxb-api:2.3.1'
     implementation group: 'com.google.code.gson', name: 'gson', version: '2.8.9'
